Refit to new mailer

--- a/views/mail/billing_report.htm
+++ b/views/mail/billing_report.htm
@@ -1,5 +1,8 @@
 subject = "Automated billing report"
+description = "Sent to administrators when the system finishes processing the automated billing."
 ==
-<p>Hi!</p>
-<p>We have finished processing the automated billing. Below is a detailed report.</p>
-<p>{{ billing_report }}</p>
+Hi!
+
+We have finished processing the automated billing. Below is a detailed report.
+
+{{ billing_report }}
