--- a/views/mail/invoice_report.htm
+++ b/views/mail/invoice_report.htm
@@ -1,5 +1,8 @@
 subject = "Invoice generating report"
+description = "Sent to administrators when the system finishes generating membership orders."
 ==
-<p>Hi!</p>
-<p>We finished generating membership orders. Below is a detailed report.</p>
-<p>{{ invoice_report }}</p>
+Hi!
+
+We finished generating membership orders. Below is a detailed report.
+
+{{ invoice_report }}
