--- a/views/mail/membership_status_update_internal.htm
+++ b/views/mail/membership_status_update_internal.htm
@@ -1,4 +1,5 @@
 subject = "Membership status changed: {{ membership_id }}"
+description = "Sent to the store team members on new membership."
 ==
 <p>
     This message is to inform you that membership #{membership_id} has changed its status from {membership_previous_status} to {membership_status_name}.
