--- a/views/mail/new_membership_internal.htm
+++ b/views/mail/new_membership_internal.htm
@@ -1,4 +1,5 @@
 subject = "New membership: {{ membership_id }}"
+description = "Sent to the store team members when an membership changes its status."
 ==
 <p>This message is to inform you about new membership #{membership_id}</p>
 <p><strong>Membership details</strong></p>
