--- a/views/mail/new_membership_internal.htm
+++ b/views/mail/new_membership_internal.htm
@@ -1,43 +1,44 @@
 subject = "New membership: {{ membership_id }}"
 description = "Sent to the store team members when an membership changes its status."
 ==
-<p>This message is to inform you about new membership #{membership_id}</p>
-<p><strong>Membership details</strong></p>
-<p>
-    Membership #{membership_id}<br />
-    Original Start Date: {membership_original_start}<br />
-    Original End Date: {membership_original_end}<br />
-    Current Start Date: {membership_start}<br />
-    Current End Date: {membership_original_end}<br />
-    Next Assessment: {membership_accessment}<br />
-    Activate On: {membership_activated}<br />
-    Cancelled On: {membership_cancelled}<br />
-    Current Period: {membership_period}
-</p>
+This message is to inform you about new membership #{membership_id}
 
-<p><strong>Order details</strong></p>
-<p>
-    Order <strong>#{order_id}</strong>, created on <strong>{order_date}</strong><br />
-    Subtotal: <strong>{order_subtotal}</strong><br />
-    Shipping: <strong>{order_shipping_quote}</strong><br />
-    Tax: <strong>{order_tax}</strong><br />
-    Discount total: <strong>{cart_discount}</strong><br />
-    Total: <strong>{order_total}</strong>
-</p>
-<p>Coupon: {order_coupon}</p>
+**Membership details**
 
-<p>Customer notes:</p>
-<blockquote>{customer_notes}</blockquote>
+- Membership #{membership_id}
+- Original Start Date: {membership_original_start}
+- Original End Date: {membership_original_end}
+- Current Start Date: {membership_start}
+- Current End Date: {membership_original_end}
+- Next Assessment: {membership_accessment}
+- Activate On: {membership_activated}
+- Cancelled On: {membership_cancelled}
+- Current Period: {membership_period}
 
-<p><strong>Order items</strong></p>
-<p>{membership_order_content}</p>
+**Order details**
 
-<p><strong>Customer details</strong></p>
-<p>
-    Billing name: {billing_customer_name}<br />
-    Billing address: {membership_billing_address}
-</p>
-<p>
-    Shipping name: {shipping_customer_name}<br />
-    Shipping address: {membership_shipping_address}
-</p>
+- Order **#{order_id}**, created on **{order_date}**
+- Subtotal: **{order_subtotal}**
+- Shipping: **{order_shipping_quote}**
+- Tax: **{order_tax}**
+- Discount total: **{cart_discount}**
+- Total: **{order_total}**
+
+Coupon: {order_coupon}
+
+Customer notes:
+
+```
+{customer_notes}
+```
+
+**Order items**
+{membership_order_content}
+
+**Customer details**
+
+- Billing name: {billing_customer_name}
+- Billing address: {membership_billing_address}
+
+- Shipping name: {shipping_customer_name}
+- Shipping address: {membership_shipping_address}
